--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aw-watcher-spotify"
-version = "0.2.0"
+version = "0.3.0"
 description = "Spotify watcher for ActivityWatch"
 authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
 license = "MPL-2.0"
@@ -10,13 +10,13 @@ repository = "https://github.com/ActivityWatch/aw-watcher-spotify"
 aw-watcher-spotify = "aw_watcher_spotify:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 spotipy = "^2.12.0"
-aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}
+aw-client = "^0.5.7"
 
 [tool.poetry.dev-dependencies]
-black = "^19.10b0"
-mypy = "^0.770"
+black = "*"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry>=0.12"]
