--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,4 @@ jobs:
         poetry run python3 -c 'import aw_watcher_spotify'
     - name: Typecheck with mypy
       run: |
-        poetry run mypy --install-types
-        poetry run mypy --ignore-missing-imports aw_watcher_spotify
+        poetry run mypy --install-types --ignore-missing-imports aw_watcher_spotify
